--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "discord-akairo": "^7.5.5",
     "discord.js": "^11.4.2",
-    "sqlite": "^3.0.1",
-    "typescript": "^3.3.1",
     "dotenv": "^6.2.0",
-    "nodemon": "^1.18.9",
-    "pluralize": "^7.0.0"
+    "pg": "^7.8.0",
+    "pluralize": "^7.0.0",
+    "sqlite": "^3.0.1",
+    "typescript": "^3.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
