--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
+    "bluebird": "^3.5.5",
     "discord-akairo": "^7.5.5",
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "pg": "^7.8.0",
+    "pg-promise": "^9.0.3",
     "pluralize": "^7.0.0",
     "sqlite": "^3.0.1",
+    "sqlite3": "^4.1.0",
     "typescript": "^3.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
