Added node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "siero-bot",
   "version": "1.0.0",
+  "engines": {
+    "node": "13.8.0"
+  },
   "description": "",
   "main": "bot.js",
   "dependencies": {
