--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord-akairo": "^7.5.5",
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
+    "node-cache": "^5.1.0",
     "pg": "^7.8.0",
     "pluralize": "^7.0.0",
     "typescript": "^3.3.1"
