--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "pg": "^7.8.0",
+    "pg-promise": "^10.4.3",
     "pluralize": "^7.0.0",
     "typescript": "^3.3.1"
   },
