--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   "main": "bot.js",
   "dependencies": {
     "chance": "^1.1.5",
-    "discord-akairo": "^7.5.6",
-    "discord.js": "^11.6.4",
+    "discord-akairo": "^8.0.0",
+    "discord.js": "^12.0.0",
     "dotenv": "^6.2.0",
     "pg": "^7.18.2",
-    "pg-promise": "^10.5.5",
+    "pg-promise": "^10.5.6",
     "pluralize": "^7.0.0",
-    "typescript": "^3.8.3"
+    "sqlite": "^4.0.7",
+    "typescript": "^3.9.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "sequelize": "^5.21.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
