--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonJS",
+    "module": "esnext",
     "allowJs": true,
     "declaration": true,
     "outDir": "build/dist/",
