--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.0.0",
     "dotenv": "^6.2.0",
+    "make-fetch-happen": "^8.0.7",
     "pg": "^7.18.2",
     "pg-promise": "^10.5.6",
     "pluralize": "^7.0.0",
