--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonJS",
+    "module": "esNext",
     "allowJs": true,
     "declaration": true,
     "outDir": "build/dist/",
@@ -26,5 +26,6 @@
     "node_modules",
     "build",
     "scripts",
+    "cache"
   ]
 }
