--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pg-promise": "^10.5.6",
     "pluralize": "^7.0.0",
     "sqlite": "^4.0.7",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "tslib": "^2.3.3"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
