--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "build/dist/bot.js",
   "dependencies": {
     "chance": "^1.1.5",
+    "dayjs": "^1.8.28",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.0.0",
     "dotenv": "^6.2.0",
