--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.0.0",
     "dotenv": "^6.2.0",
     "make-fetch-happen": "^8.0.7",
+    "mwbot": "^1.0.10",
     "node-emoji": "^1.10.0",
     "pg": "^7.18.2",
     "pg-promise": "^10.5.6",
