--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pluralize": "^7.0.0",
     "sqlite": "^4.0.7",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
