--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "description": "",
   "main": "build/dist/bot.js",
   "dependencies": {
+    "@types/xml2js": "^0.4.5",
     "chance": "^1.1.5",
     "dayjs": "^1.8.28",
     "dayjs-precise-range": "^1.0.1",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.0.0",
     "dotenv": "^6.2.0",
+    "jsdom": "^16.2.2",
     "make-fetch-happen": "^8.0.7",
     "mwbot": "^1.0.10",
     "node-emoji": "^1.10.0",
