--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chance": "^1.1.5",
     "dayjs": "^1.8.28",
+    "dayjs-plugin-utc": "^0.1.2",
     "dayjs-precise-range": "^1.0.1",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.0.0",
