--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "siero-bot",
   "version": "2.0.0",
   "description": "A rewrite of siero-bot using Sapphire",
-  "main": "index.js",
+  "main": "src/index.ts",
   "author": "Justin Edmund <justin@jedmund.com>",
   "license": "MIT",
   "dependencies": {
