--- a/package.json
+++ b/package.json
@@ -2,11 +2,33 @@
   "name": "siero-bot",
   "version": "2.0.0",
   "description": "A rewrite of siero-bot using Sapphire",
-  "main": "src/index.ts",
+  "main": "build/dist/index.js",
   "author": "Justin Edmund <justin@jedmund.com>",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/framework": "^4.2.2",
-    "discord.js": "14.x"
+    "@sapphire/decorators": "^6.0.1",
+    "@sapphire/framework": "latest",
+    "@sapphire/plugin-subcommands": "^4.0.1",
+    "chance": "^1.1.11",
+    "discord.js": "14.x",
+    "dotenv": "^16.0.3",
+    "kysely": "^0.24.2",
+    "pg": "^8.10.0",
+    "tslib": "^2.5.0"
+  },
+  "devDependencies": {
+    "@types/chance": "^1.1.3",
+    "@types/pg": "^8.6.6",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "build-ts": "rm -rf build/dist && tsc",
+    "postinstall": "npm run build-ts",
+    "start": "concurrently \"npm run watch-ts\" \"npm run watch-node\"",
+    "serve": "node build/dist/index.js",
+    "watch-node": "nodemon build/dist/index.js",
+    "watch-ts": "tsc -w",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
