--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.0.3",
     "kysely": "^0.24.2",
     "pg": "^8.10.0",
+    "pluralize": "^8.0.0",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
     "@types/pg": "^8.6.6",
+    "@types/pluralize": "^0.0.29",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22"
   },
