--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "kysely": "^0.24.2",
     "pg": "^8.10.0",
     "pluralize": "^8.0.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
