--- a/package.json
+++ b/package.json
@@ -6,24 +6,31 @@
   "author": "Justin Edmund <justin@jedmund.com>",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/decorators": "^6.0.1",
-    "@sapphire/framework": "latest",
-    "@sapphire/plugin-subcommands": "^4.0.1",
+    "@sapphire/decorators": "^6.0.2",
+    "@sapphire/framework": "^4.8.5",
+    "@sapphire/plugin-subcommands": "^7.0.1",
+    "@types/node": "^22.13.13",
     "chance": "^1.1.12",
-    "discord.js": "14.x",
-    "dotenv": "^16.0.3",
-    "kysely": "^0.24.2",
-    "pg": "^8.10.0",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.1",
+    "kysely": "^0.27.2",
+    "pg": "^8.11.3",
     "pluralize": "^8.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/chance": "^1.1.3",
-    "@types/pg": "^8.6.6",
-    "@types/pluralize": "^0.0.29",
-    "concurrently": "^8.0.1",
-    "nodemon": "^3.1.9"
+    "@eslint/js": "^9.23.0",
+    "@types/chance": "^1.1.6",
+    "@types/pg": "^8.10.9",
+    "@types/pluralize": "^0.0.33",
+    "concurrently": "^8.2.2",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.28.0"
   },
   "scripts": {
     "build-ts": "rm -rf build/dist && tsc",
@@ -32,7 +39,8 @@
     "serve": "node build/dist/index.js",
     "watch-node": "nodemon build/dist/index.js",
     "watch-ts": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "purge-commands": "ts-node src/scripts/purge-commands.ts"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
