Skip library check in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "removeComments": false,
     "resolveJsonModule": true,
     "rootDir": "src/",
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "ES2020",
